Bug 250091 - in akonadiconsole,in tab Browser, doesnt correct lists items when selecting Date
Summary: in akonadiconsole,in tab Browser, doesnt correct lists items when selecting Date
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: akonadiconsole (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
: 251971 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-03 22:25 UTC by
Modified: 2014-07-09 18:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2010-09-03 22:25:38 UTC
Version:           unspecified (using Devel) 
OS:                Linux

in akonadiconsole,in tab Browser, when selecting Model: Mail, and then selecting Date, it doesnt lists entries in correct order.

Entries appear in random order and not in a correct date order.

Reproducible: Always
Comment 1 2010-09-03 22:27:48 UTC
When hitting Date, it orders in alphabetical order instead sorting in a date order...
Comment 2 2011-01-20 18:25:44 UTC
This continues being an unresolved bug and its very confusing not being able to have mails set by date order
Comment 3 Christophe Marin 2011-02-22 00:10:51 UTC
*** Bug 251971 has been marked as a duplicate of this bug. ***
Comment 4 Daniel Vrátil 2014-07-09 18:45:38 UTC
Git commit e5ed9bdb15c8b0840bc2bc95912bbec28624f0f0 by Dan Vrátil.
Committed on 09/07/2014 at 18:43.
Pushed by dvratil into branch 'KDE/4.14'.

AkonadiConsole: Fix sorting items by date in Browser tab
FIXED-IN: 4.14.0

M  +45   -0    akonadiconsole/akonadibrowsermodel.cpp
M  +16   -0    akonadiconsole/akonadibrowsermodel.h
M  +6    -1    akonadiconsole/browserwidget.cpp

http://commits.kde.org/kdepim/e5ed9bdb15c8b0840bc2bc95912bbec28624f0f0