AkonadiConsole: Fix sorting items by date in Browser tab

BUG: 250091
FIXED-IN: 4.14.0